Fixed problem with google font not showing on print media. Also added new blog post

--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -17,7 +17,7 @@
     font-size: 2em;
     }
 
-  section#jobs h2, section#education h2, section#commnity-involvement h2, section#publication h2 {
+  section#jobs h2, section#education h2, section#community-involvement h2, section#publications h2 {
     font-family: 'EB Garamond', serif;
     font-size: 1.5em;
     }
